# Doc-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: learning_report.md
scripts/: demo_learning.py  simulate_operator_edits.py
src/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_config.py
src/generation/: __init__.py  draft_store.py  evidence.py  generator.py  grounding_check.py  interfaces.py  prompts.py  retriever.py
src/learning/: __init__.py  database.py  diff.py  edit_capture.py  interfaces.py  pattern_extract.py  report.py  service.py  store.py
src/llm/: __init__.py  gemini.py
src/models/: __init__.py  chunk.py  common.py  document.py  draft.py  learning.py  processing_output.py  retrieval.py
src/pipeline/: __init__.py  dependencies.py  factory.py  interfaces.py  orchestrator.py
src/processing/: __init__.py  aggregator.py  chunker.py  constants.py  interfaces.py  loader.py  ocr.py  page_extractor.py  pdf_native.py  processor.py  storage.py  structured_extract.py
src/retrieval/: __init__.py  chroma_store.py  embeddings.py  index.py  interfaces.py  service.py
tests/: test_cli.py  test_config.py  test_learning.py  test_pipeline.py  test_processing.py  test_retrieval.py
